--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -1,3 +1,8 @@
+- if task.errors.present?
+    ul#error_explanation
+        - task.errors.full_messages.each do |msg|
+            li= msg
+
 = form_with model: task, local: true do |f|
     .form-group
         =f.label :name
